PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/Interface_Service_Master__c.object-meta.xml
<CustomObject>
    <description>Interface Service Master</description>
    <label>Interface Service Master</label>
    <nameField>
        <displayFormat>IF_{0000}</displayFormat>
        <label>Interface Service Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>