PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Communication_Link_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Link_Type__c</fullName>
    <description>Communication Link Type</description>
    <inlineHelpText>Communication Link Type</inlineHelpText>
    <label>Communication Link Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
                <default>true</default>
                <label>API</label>
            </value>
            <value>
                <fullName>SAP</fullName>
                <isActive>false</isActive>
                <label>SAP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>