PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Dml_Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Dml_Log_Type__c</fullName>
    <description>수행되는 인터페이스의 수행 작업을 구분하는 필드
- 설정 값에 따라 인터페이스 로그에 구분되어 기록된다</description>
    <inlineHelpText>수행되는 인터페이스의 수행 작업을 구분하는 필드
- 설정 값에 따라 인터페이스 로그에 구분되어 기록된다</inlineHelpText>
    <label>DML 로그 타입</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SELECT</fullName>
            </value>
            <value>
                <fullName>INSERT</fullName>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
            <value>
                <fullName>UPSERT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>