PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/DML_Plan__c.field-meta.xml
<CustomField>
    <fullName>DML_Plan__c</fullName>
    <description>API DML 계획를 기재</description>
    <inlineHelpText>API DML 계획를 기재</inlineHelpText>
    <label>Query설명</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>