PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/HTTP_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Method_Type__c</fullName>
    <description>- POST/GET : select
- PUT : upsert
- DELETE : delete
- INSERT : insert
- UPDATE : update</description>
    <inlineHelpText>- POST/GET : select
- PUT : upsert
- DELETE : delete
- INSERT : insert
- UPDATE : update</inlineHelpText>
    <label>HTTP 요청타입</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POST</fullName>
                <default>true</default>
                <label>POST</label>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>INSERT</fullName>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>