PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/IN_OUT_Type__c.field-meta.xml
<CustomField>
    <fullName>IN_OUT_Type__c</fullName>
    <description>인터페이스 송/수신 구분을 기재(수신:IN, 송신:OUT)</description>
    <inlineHelpText>인터페이스 송/수신 구분을 기재(수신:IN, 송신:OUT)</inlineHelpText>
    <label>송수신 구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
                <default>true</default>
                <label>IN</label>
            </value>
            <value>
                <fullName>OUT</fullName>
            </value>
            <value>
                <fullName>TABLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>