PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Interface_Description__c.field-meta.xml
<CustomField>
    <fullName>Interface_Description__c</fullName>
    <description>인터페이스 설명을 기재</description>
    <inlineHelpText>인터페이스 설명을 기재</inlineHelpText>
    <label>인터페이스 설명</label>
    <type>TextArea</type>
</CustomField>