PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Interface_ID__c.field-meta.xml
<CustomField>
    <fullName>Interface_ID__c</fullName>
    <description>인터페이스 정의서에서 정의한 ID를 기재</description>
    <externalId>true</externalId>
    <inlineHelpText>인터페이스 정의서에서 정의한 ID를 기재</inlineHelpText>
    <label>인터페이스ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>