PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Interface_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Name__c</fullName>
    <description>Interface Name</description>
    <inlineHelpText>Interface Name</inlineHelpText>
    <label>인터페이스명</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>