PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <description>DEBUG : 모든 송수신 이력 기록한다.
ERROR : 실패(에러)인 이력만 기록한다.
OFF : 모든 이력을 남기지 않는다.</description>
    <inlineHelpText>DEBUG : 모든 송수신 이력 기록한다.
ERROR : 실패(에러)인 이력만 기록한다.
OFF : 모든 이력을 남기지 않는다.</inlineHelpText>
    <label>로그레벨</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
                <default>true</default>
                <label>DEBUG</label>
            </value>
            <value>
                <fullName>OFF</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
                <isActive>false</isActive>
                <label>INFO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>