PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Master_Table__c.field-meta.xml
<CustomField>
    <fullName>Master_Table__c</fullName>
    <description>조회 쿼리에서 from절에 포함될 메인 테이블명을 기재</description>
    <inlineHelpText>조회 쿼리에서 from절에 포함될 메인 테이블명을 기재</inlineHelpText>
    <label>테이블명</label>
    <length>100</length>
    <type>Text</type>
</CustomField>