PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Protocol_Type__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Type__c</fullName>
    <description>통신에 적용할 방식(Protocal)를 기재</description>
    <inlineHelpText>통신에 적용할 방식(Protocal)를 기재</inlineHelpText>
    <label>통신방식</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REST</fullName>
                <default>true</default>
                <label>REST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>