PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <description>레코드 객체명(사용안함)</description>
    <inlineHelpText>레코드 객체명(사용안함)</inlineHelpText>
    <label>레코드명</label>
    <length>100</length>
    <type>Text</type>
</CustomField>