PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Record_To__c.field-meta.xml
<CustomField>
    <fullName>Record_To__c</fullName>
    <description>페이지 조회 시 조회 완료번호를 기재함</description>
    <inlineHelpText>페이지 조회 시 조회 완료번호를 기재함</inlineHelpText>
    <label>조회완료번호</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>