PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Request_Data_Format_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Data_Format_Type__c</fullName>
    <description>요청시 적용할 데이터 타입 지정</description>
    <inlineHelpText>요청시 적용할 데이터 타입 지정</inlineHelpText>
    <label>요청 데이터 타입</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JSON</fullName>
                <default>true</default>
                <label>JSON</label>
            </value>
            <value>
                <fullName>XML</fullName>
                <isActive>false</isActive>
                <label>XML</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>