PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Response_Data_Format_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Data_Format_Type__c</fullName>
    <description>응답시 적용할 데이터 타입 지정</description>
    <inlineHelpText>응답시 적용할 데이터 타입 지정</inlineHelpText>
    <label>응답 데이터 타입</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JSON</fullName>
                <default>true</default>
                <label>JSON</label>
            </value>
            <value>
                <fullName>XML</fullName>
                <isActive>false</isActive>
                <label>XML</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>