PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/fields/Run_Class__c.field-meta.xml
<CustomField>
    <fullName>Run_Class__c</fullName>
    <description>클래스 지정시 지정된 클래스를 통해 인터페이스가 처리됨</description>
    <inlineHelpText>클래스 지정시 지정된 클래스를 통해 인터페이스가 처리됨</inlineHelpText>
    <label>예외처리 클래스</label>
    <length>100</length>
    <type>Text</type>
</CustomField>