PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Interface_ID__c</columns>
    <columns>Interface_Name__c</columns>
    <columns>Log_Type__c</columns>
    <columns>Run_Class__c</columns>
    <columns>Dml_Log_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Interface_Description__c</columns>
    <columns>HTTP_Method_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>