PA_Education/TestMenifest/force-app/main/default/objects/Interface_Service_Master__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Request_Data_Format_Type__c</columns>
    <columns>Response_Data_Format_Type__c</columns>
    <columns>Interface_Description__c</columns>
    <columns>Interface_Name__c</columns>
    <columns>Interface_ID__c</columns>
    <columns>Record_From__c</columns>
    <columns>Record_To__c</columns>
    <columns>Master_Table__c</columns>
    <columns>Protocol_Type__c</columns>
    <columns>Run_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>